Gateway upgrades to get data from v4.

--- a/src/app/gateway/gateway-detail/gateway-detail.component.html
+++ b/src/app/gateway/gateway-detail/gateway-detail.component.html
@@ -6,7 +6,7 @@
       <div class="col-md-6 d-flex align-items-stretch">
         <div class="jumbotron jumbotron--m-right jumbotron--full-width">
           <h3>{{ 'GATEWAY.DETAILS' | translate }}</h3>
-          <p><strong>{{ 'GATEWAY.ID' | translate }}</strong>{{gateway.id}}</p>
+          <p><strong>{{ 'GATEWAY.ID' | translate }}</strong>{{gateway.gatewayId}}</p>
           <p><strong>{{ 'GATEWAY.ORGANIZATION' | translate }}</strong>{{gateway.internalOrganizationName}}</p>
           <app-general-details [data]="gateway"></app-general-details>
           <p><strong>{{ 'GATEWAY.TAGS' | translate }}</strong>{{gateway.tagsString}}</p>
