--- a/src/app/applications/applications-list/applications-table/applications-table.component.scss
+++ b/src/app/applications/applications-list/applications-table/applications-table.component.scss
@@ -1,12 +1,15 @@
-// .example-loading-shade {
-//   position: absolute;
-//   top: 0;
-//   left: 0;
-//   bottom: 0;
-//   right: 0;
-//   background: rgba(0, 0, 0, 0.15);
-//   z-index: 1;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-// }
+.table-select {
+  width: 180px;
+  margin: 5px;
+
+}
+
+.select-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.flag-icon {
+  color: red;
+}
