--- a/src/app/applications/applications-list/applications-table/applications-table.component.html
+++ b/src/app/applications/applications-list/applications-table/applications-table.component.html
@@ -5,7 +5,6 @@
     [(value)]="optionalColumnsSelected"
     (selectionChange)="handleColumnSelection($event)"
     panelClass="tall"
-    formControlName="column"
   >
     <mat-option disabled>
       <button
@@ -87,7 +86,7 @@
       </ng-container>
 
       <ng-container matColumnDef="openDataDkEnabled">
-        <th mat-header-cell *matHeaderCellDef class="col-1">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-1">
           {{ 'APPLICATION-TABLE.OPEN-DATA-DK' | translate }}
         </th>
         <td mat-cell *matCellDef="let application">
