--- a/src/app/applications/applications-list/applications-table/applications-table.component.html
+++ b/src/app/applications/applications-list/applications-table/applications-table.component.html
@@ -1,30 +1,8 @@
-<div class="select-container">
-  <mat-select
-    class="form-control table-select"
-    multiple="true"
-    [(value)]="optionalColumnsSelected"
-    (selectionChange)="handleColumnSelection($event)"
-    panelClass="tall"
-  >
-    <mat-option disabled>
-      <button
-        mat-raised-button
-        class="mat-primary fill text-sm"
-        (click)="selectAll()">
-        {{'QUESTION.DATATARGET.SELECTALLDEVICES' | translate}}
-      </button>
-      <button
-        mat-raised-button
-        class="mat-primary fill text-sm"
-        (click)="deSelectAll()">
-        {{'QUESTION.DATATARGET.DESELECTALLDEVICES' | translate}}
-      </button>
-    </mat-option>
-    <mat-option *ngFor="let option of optionalColumnOptions" [value]="option.id">
-      {{option.display | translate}}
-    </mat-option>
-  </mat-select>
-</div>
+<app-column-selector
+  [(displayedColumns)]="displayedColumns"
+  [columnDefinitions]="columnDefinitions"
+  [localStorageKey]="applicationSavedColumns"
+></app-column-selector>
 
 <div class="mat-elevation-z8">
   <div class="loading-shade" *ngIf="isLoadingResults">
@@ -69,7 +47,7 @@
 
       <!-- Devices Column -->
       <ng-container matColumnDef="devices">
-        <th mat-header-cell *matHeaderCellDef class="col-2">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-2">
           {{ 'APPLICATION-TABLE.IOT-DEVICES' | translate }}</th>
         <td mat-cell *matCellDef="let element">
           {{element?.iotDevices?.length ?? 0}}
@@ -77,7 +55,7 @@
       </ng-container>
 
       <ng-container matColumnDef="dataTargets">
-        <th mat-header-cell *matHeaderCellDef class="col-1">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header class="col-1">
           {{ 'APPLICATION-TABLE.DATA-TARGETS' | translate}}
         </th>
         <td mat-cell *matCellDef="let application">
