--- a/src/app/applications/iot-devices/iot-devices-table/iot-devices-table.component.html
+++ b/src/app/applications/iot-devices/iot-devices-table/iot-devices-table.component.html
@@ -1,3 +1,10 @@
+<app-column-selector
+  [(displayedColumns)]="displayedColumns"
+  [columnDefinitions]="columnDefinitions"
+  [localStorageKey]="iotDeviceSavedColumns"
+  [placeholder]=""
+></app-column-selector>
+
 <div class="mat-elevation-z8">
   <div class="loading-shade" *ngIf="isLoadingResults">
     <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
@@ -15,23 +22,69 @@
       <th mat-sort-header="name" *matHeaderCellDef mat-header-cell>
         {{ 'APPLICATION-TABLE.NAME' | translate }}
       </th>
-      <td mat-cell *matCellDef="let element">
-        <a [routerLink]="['../iot-device', element.id]" routerLinkActive="active" class="device-link">{{element.name}}</a>
+      <td mat-cell *matCellDef="let iotDevice">
+        <a [routerLink]="['../iot-device', iotDevice.id]" routerLinkActive="active" class="device-link">{{iotDevice.name}}</a>
       </td>
     </ng-container>
 
     <!-- Technology Column -->
-    <ng-container matColumnDef="technology">
-      <th mat-header-cell *matHeaderCellDef>{{ 'IOT-TABLE.NETWORK-TECHNOLOGY' | translate }}</th>
-      <td mat-cell *matCellDef="let element">{{"IOT-DEVICE-TYPES." + element.type | translate}}</td>
+    <ng-container matColumnDef="type">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'IOT-TABLE.NETWORK-TECHNOLOGY' | translate }}</th>
+      <td mat-cell *matCellDef="let iotDevice">{{"IOT-DEVICE-TYPES." + iotDevice.type | translate }}</td>
     </ng-container>
 
-    <!-- Alarm Column -->
-    <ng-container matColumnDef="alarm">
-      <th mat-header-cell *matHeaderCellDef>{{ 'IOT-TABLE.ALARM' | translate }}</th>
-      <td mat-cell *matCellDef="let element">
-        N/A
+    <ng-container matColumnDef="deviceModel">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'IOTDEVICE.DEVICEMODEL' | translate }}</th>
+      <td mat-cell *matCellDef="let iotDevice">{{ iotDevice.deviceModel?.body?.name ?? '-' }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="deviceProfileName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'IOTDEVICE.LORA.DEVICEPROFILE' | translate }}</th>
+      <td mat-cell *matCellDef="let iotDevice">{{ iotDevice.deviceProfileName ?? '-'}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="deviceEUI">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'IOT-TABLE.DEV-EUI' | translate }}</th>
+      <td mat-cell *matCellDef="let iotDevice">{{iotDevice.deviceEUI ?? '-'}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="OTAAapplicationKey">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'IOT-TABLE.APP-KEY' | translate }}</th>
+      <td mat-cell *matCellDef="let iotDevice">{{iotDevice.OTAAapplicationKey ?? '-'}}</td>
+    </ng-container>
+
+
+    <!-- RSSI column -->
+    <ng-container matColumnDef="rssi">
+      <th *matHeaderCellDef mat-header-cell mat-sort-header="rssi">
+        {{ 'IOT-TABLE.RSSI' | translate }}
+      </th>
+      <td mat-cell *matCellDef="let iotDevice">
+        <ng-container *ngIf="iotDevice.type === 'LORAWAN' || iotDevice.type === 'SIGFOX'; else notSupported">
+          <div *ngIf="iotDevice.latestReceivedMessage?.rssi; else notAvailable">
+            {{iotDevice.latestReceivedMessage.rssi}}
+          </div>
+        </ng-container>
       </td>
+    </ng-container>
+
+    <!-- SNR column -->
+    <ng-container matColumnDef="snr">
+      <th *matHeaderCellDef mat-header-cell mat-sort-header="snr">
+        {{ 'IOT-TABLE.SNR' | translate }}
+      </th>
+      <td mat-cell *matCellDef="let iotDevice">
+        <ng-container *ngIf="iotDevice.type === 'LORAWAN' || iotDevice.type === 'SIGFOX'; else notSupported">
+          <div *ngIf="iotDevice.latestReceivedMessage?.snr; else notAvailable">
+            {{iotDevice.latestReceivedMessage?.snr}}
+          </div>
+        </ng-container>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="dataTargets">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'APPLICATION-TABLE.DATA-TARGETS' | translate }}</th>
+      <td mat-cell *matCellDef="let iotDevice">{{iotDevice.connections?.length ?? 0}}</td>
     </ng-container>
 
     <!-- Battery Column -->
@@ -39,9 +92,9 @@
       <th *matHeaderCellDef mat-header-cell>
         {{ 'IOT-TABLE.BATTERY' | translate }}
       </th>
-      <td mat-cell *matCellDef="let element">
-        <div *ngIf="element.type === 'LORAWAN'; else noBatteryStatus">
-          <app-batteri-status [color]="batteryStatusColor" [percentage]="getBatteryProcentage(element)">
+      <td mat-cell *matCellDef="let iotDevice">
+        <div *ngIf="iotDevice.type === 'LORAWAN'; else noBatteryStatus">
+          <app-batteri-status [color]="batteryStatusColor" [percentage]="getBatteryProcentage(iotDevice)">
           </app-batteri-status>
         </div>
         <ng-template #noBatteryStatus>
@@ -57,52 +110,24 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header="active">
         {{ 'IOT-TABLE.ACTIVE' | translate }}
       </th>
-      <td mat-cell *matCellDef="let element">{{lastActive(element)}}</td>
-    </ng-container>
-
-    <!-- RSSI column -->
-    <ng-container matColumnDef="rssi">
-      <th *matHeaderCellDef mat-header-cell mat-sort-header="rssi">
-        {{ 'IOT-TABLE.RSSI' | translate }}
-      </th>
-      <td mat-cell *matCellDef="let element">
-        <ng-container *ngIf="element.type === 'LORAWAN' || element.type === 'SIGFOX'; else notSupported">
-          <div *ngIf="element.latestReceivedMessage?.rssi; else notAvailable">
-            {{element.latestReceivedMessage.rssi}}
-          </div>
-        </ng-container>
-      </td>
-    </ng-container>
-
-    <!-- SNR column -->
-    <ng-container matColumnDef="snr">
-      <th *matHeaderCellDef mat-header-cell mat-sort-header="snr">
-        {{ 'IOT-TABLE.SNR' | translate }}
-      </th>
-      <td mat-cell *matCellDef="let element">
-        <ng-container *ngIf="element.type === 'LORAWAN' || element.type === 'SIGFOX'; else notSupported">
-          <div *ngIf="element.latestReceivedMessage?.snr; else notAvailable">
-            {{element.latestReceivedMessage?.snr}}
-          </div>
-        </ng-container>
-      </td>
+      <td mat-cell *matCellDef="let iotDevice">{{lastActive(iotDevice)}}</td>
     </ng-container>
 
     <ng-container matColumnDef="menu">
       <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let element">
+      <td mat-cell *matCellDef="let iotDevice">
         <div class="dropdown" *ngIf="canEdit">
-          <a href="#" role="button" id="tableRowDropdown-{{element.id}}" class="applicationRow__edit dropdown-toggle"
+          <a href="#" role="button" id="tableRowDropdown-{{iotDevice.id}}" class="applicationRow__edit dropdown-toggle"
             data-toggle="dropdown" aria-expanded="false"
             [attr.aria-label]="'APPLICATION-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
-          <ul class="dropdown-menu dropdown-menu--table" attr.aria-labelledby="tableRowDropdown-{{element.id}}">
+          <ul class="dropdown-menu dropdown-menu--table" attr.aria-labelledby="tableRowDropdown-{{iotDevice.id}}">
             <li class="dropdown-item">
-              <a [routerLink]="['../iot-device-edit', element.id]" routerLinkActive="active">{{ 'IOTDEVICE-TABLE-ROW.EDIT'
+              <a [routerLink]="['../iot-device-edit', iotDevice.id]" routerLinkActive="active">{{ 'IOTDEVICE-TABLE-ROW.EDIT'
                 | translate }}
               </a>
             </li>
             <li class="dropdown-item">
-              <a (click)="clickDelete(element)" [routerLink]="[]">{{ 'IOTDEVICE-TABLE-ROW.DELETE' | translate }}</a>
+              <a (click)="clickDelete(iotDevice)" [routerLink]="[]">{{ 'IOTDEVICE-TABLE-ROW.DELETE' | translate }}</a>
             </li>
           </ul>
         </div>
