--- a/src/assets/scss/components/_tables.scss
+++ b/src/assets/scss/components/_tables.scss
@@ -116,3 +116,15 @@ table {
   align-items: center;
   justify-content: center;
 }
+
+.table-select {
+  width: 180px !important;
+  margin: 5px;
+
+}
+
+.select-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
