Changed datastructure of gateway to match database + Column administration on gateway-status-table

--- a/src/app/gateway/gateway-detail/gateway-detail.component.html
+++ b/src/app/gateway/gateway-detail/gateway-detail.component.html
@@ -6,8 +6,8 @@
       <div class="col-md-6 d-flex align-items-stretch">
         <div class="jumbotron jumbotron--m-right jumbotron--full-width">
           <h3>{{ 'GATEWAY.DETAILS' | translate }}</h3>
-          <p><strong>{{ 'GATEWAY.ID' | translate }}</strong>{{gateway.id}}</p>
-          <p><strong>{{ 'GATEWAY.ORGANIZATION' | translate }}</strong>{{gateway.internalOrganizationName}}</p>
+          <p><strong>{{ 'GATEWAY.ID' | translate }}</strong>{{gateway.gatewayId}}</p>
+          <p><strong>{{ 'GATEWAY.ORGANIZATION' | translate }}</strong>{{gateway.organizationName}}</p>
           <app-general-details [data]="gateway"></app-general-details>
           <p><strong>{{ 'GATEWAY.TAGS' | translate }}</strong>{{gateway.tagsString}}</p>
           <p *ngIf="gateway.description">
@@ -50,7 +50,7 @@
   <div class="row">
     <div class="col-12">
       <div class="jumbotron">
-        <app-gateway-status [isVisibleSubject]="isGatewayStatusVisibleSubject" [gatewayId]="id" paginatorClass="d-none"
+        <app-gateway-status [isVisibleSubject]="isGatewayStatusVisibleSubject" [gatewayId]="gatewayId" paginatorClass="d-none"
           [shouldLinkToDetails]="false" [title]="'GATEWAY.ONLINE-STATUS' | translate">
         </app-gateway-status>
       </div>
