--- a/src/assets/scss/components/_topbar.scss
+++ b/src/assets/scss/components/_topbar.scss
@@ -16,6 +16,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
     &--menu {
       display: flex;
       justify-content: space-between;
@@ -32,12 +33,16 @@
         }
       }
     }
+
     .search-form-wrapper {
       align-self: center;
+
       .search-form {
         @extend .mt-2;
+
         &--full-width {
           width: 100%;
+
           .search--input {
             width: 100%;
           }
@@ -67,4 +72,9 @@
       @extend .mx-2;
     }
   }
+
+}
+
+.no-margin {
+  margin-bottom: 0 !important;
 }
