--- a/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
+++ b/src/app/profiles/device-profiles/device-profiles-edit/device-profiles-edit.component.html
@@ -47,12 +47,13 @@
                     [(ngModel)]="deviceProfile.macVersion"> -->
                 <mat-form-field appearance="outline">
                     <mat-select [disabled]="!deviceProfile.canEdit" matNativeControl required [compareWith]="compare"
-                        name="macVersion" [(value)]="deviceProfile.macVersion">
-                        <mat-option value="1.0.0">1.0.0</mat-option>
-                        <mat-option value="1.0.1">1.0.1</mat-option>
-                        <mat-option value="1.0.2">1.0.2</mat-option>
-                        <mat-option value="1.0.3">1.0.3</mat-option>
-                        <mat-option value="1.1.0">1.1.0</mat-option>
+                        name="macVersion" [(value)]="deviceProfile.macVersion" (selectionChange)="shownRegParameters($event.value)">
+                        <mat-option [value]="0">1.0.0</mat-option>
+                        <mat-option [value]="1">1.0.1</mat-option>
+                        <mat-option [value]="2">1.0.2</mat-option>
+                        <mat-option [value]="3">1.0.3</mat-option>
+                        <mat-option [value]="4">1.0.4</mat-option>
+                        <mat-option [value]="5">1.1.0</mat-option>
                     </mat-select>
                 </mat-form-field>
             </div>
@@ -62,8 +63,9 @@
                 <mat-form-field appearance="outline">
                     <mat-select matNativeControl required name="regParamsRevision" [disabled]="!deviceProfile.canEdit"
                         [(value)]="deviceProfile.regParamsRevision" [compareWith]="compare">
-                        <mat-option value="A">A</mat-option>
-                        <mat-option value="B">B</mat-option>
+                        <mat-option *ngFor="let type of revision | keyvalue" [value]="type.value">
+                          {{type.key}}
+                        </mat-option>
                     </mat-select>
                 </mat-form-field>
             </div>
@@ -80,31 +82,14 @@
             </div>
 
             <div class="col-xs-12 form-group">
-                <label for="maxEIRP"
-                    class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.MAXEIRP' | translate}}</label>
-                <input type="number" class="form-control" id="maxEIRP" name="maxEIRP"
-                    [disabled]="!deviceProfile.canEdit"
-                    [placeholder]="'PROFILES.DEVICE_PROFILE.MAXEIRP_PLACEHOLDER' | translate" maxlength="50" min="0"
-                    required [(ngModel)]="deviceProfile.maxEIRP">
+              <label for="devStatusReqFreq"
+                  class="form-label">{{'PROFILES.DEVICE_PROFILE.DEVSTATUSREQFREQ' | translate}}</label>
+              <input type="number" class="form-control" id="devStatusReqFreq" name="devStatusReqFreq"
+                  [disabled]="!deviceProfile.canEdit"
+                  [placeholder]="'PROFILES.DEVICE_PROFILE.DEVSTATUSREQFREQ_PLACEHOLDER' | translate" maxlength="50"
+                  min="1" required [(ngModel)]="deviceProfile.devStatusReqFreq">
             </div>
 
-            <div class="col-xs-12 form-group">
-                <label for="geolocBufferTTL"
-                    class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.GEOLOCBUFFERTTL' | translate}}</label>
-                <input type="number" min="0" class="form-control" id="geolocBufferTTL" name="geolocBufferTTL"
-                    [disabled]="!deviceProfile.canEdit"
-                    [placeholder]="'PROFILES.DEVICE_PROFILE.GEOLOCBUFFERTTL_PLACEHOLDER' | translate" maxlength="50"
-                    required [(ngModel)]="deviceProfile.geolocBufferTTL">
-            </div>
-
-            <div class="col-xs-12 form-group">
-                <label for="geolocMinBufferSize"
-                    class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.GEOLOCMINBUFFERSIZE' | translate}}</label>
-                <input type="number" min="0" class="form-control" id="geolocMinBufferSize" name="geolocMinBufferSize"
-                    [disabled]="!deviceProfile.canEdit"
-                    [placeholder]="'PROFILES.DEVICE_PROFILE.GEOLOCMINBUFFERSIZE_PLACEHOLDER' | translate" maxlength="50"
-                    required [(ngModel)]="deviceProfile.geolocMinBufferSize">
-            </div>
             <div class="col-xs-12 form-group mt-3" *ngIf="deviceProfile.internalOrganizationName">
                 <label for="geolocMinBufferSize" class="form-label">
                     {{'PROFILES.DEVICE_PROFILE.ORGANIZATION' | translate}}
@@ -153,14 +138,7 @@
                         [placeholder]="'PROFILES.DEVICE_PROFILE.RXFREQ2_PLACEHOLDER' | translate" maxlength="50" min="0"
                         required [(ngModel)]="deviceProfile.rxFreq2">
                 </div>
-                <div class="col-xs-12 form-group">
-                    <label for="factoryPresetFreqsInput"
-                        class="form-label asterisk-if-mandatory">{{'PROFILES.DEVICE_PROFILE.FACTORYPRESETFREQS' | translate}}</label>
-                    <input type="text" class="form-control" id="factoryPresetFreqsInput" name="factoryPresetFreqsInput"
-                        [placeholder]="'PROFILES.DEVICE_PROFILE.FACTORYPRESETFREQS_PLACEHOLDER' | translate"
-                        [disabled]="!deviceProfile.canEdit" maxlength="50" required
-                        [(ngModel)]="deviceProfile.factoryPresetFreqsInput">
-                </div>
+
             </ng-container>
         </mat-tab>
         <mat-tab label="Class B">
@@ -185,14 +163,14 @@
                     <mat-form-field appearance="outline">
                         <select matNativeControl required name="pingSlotPeriod" [disabled]="!deviceProfile.canEdit"
                             [(ngModel)]="deviceProfile.pingSlotPeriod" [value]="deviceProfile.pingSlotPeriod">
-                            <option value="32">Every second</option>
-                            <option value="64">Every 2 seconds</option>
-                            <option value="128">Every 4 seconds</option>
-                            <option value="256">Every 8 seconds</option>
-                            <option value="512">Every 16 seconds</option>
-                            <option value="1024">Every 32 seconds</option>
-                            <option value="2048">Every 64 seconds</option>
-                            <option value="4096">Every 128 seconds</option>
+                            <option value="0">Every second</option>
+                            <option value="1">Every 2 seconds</option>
+                            <option value="2">Every 4 seconds</option>
+                            <option value="3">Every 8 seconds</option>
+                            <option value="4">Every 16 seconds</option>
+                            <option value="5">Every 32 seconds</option>
+                            <option value="6">Every 64 seconds</option>
+                            <option value="7">Every 128 seconds</option>
                         </select>
                     </mat-form-field>
                 </div>
