Spinner for device profiles

--- a/src/app/profiles/device-profiles/device-profiles-list/device-profiles-list.component.html
+++ b/src/app/profiles/device-profiles/device-profiles-list/device-profiles-list.component.html
@@ -7,3 +7,6 @@
 <app-device-profiles-item *ngFor="let deviceProfile of deviceProfiles; let i = index"
     (deleteDeviceProfile)="deleteDeviceProfile($event)" [deviceProfile]="deviceProfile">
 </app-device-profiles-item>
+<div class="loading-shade" *ngIf="isDeleting">
+  <mat-spinner *ngIf="isDeleting"></mat-spinner>
+</div>
