--- a/src/app/gateway/gateway-table/gateway-table.component.html
+++ b/src/app/gateway/gateway-table/gateway-table.component.html
@@ -1,98 +1,126 @@
+<app-column-selector
+  [(displayedColumns)]="displayedColumns"
+  [columnDefinitions]="columnDefinitions"
+  [localStorageKey]="gatewayTableSavedColumns"
+></app-column-selector>
+
 <div class="mat-elevation-z8">
-    <div class="loading-shade" *ngIf="isLoadingResults">
-        <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
-    </div>
-    <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc" matSortDisableClear>
+  <div class="loading-shade" *ngIf="isLoadingResults">
+    <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
+  </div>
+  <table mat-table [dataSource]="dataSource" matSort matSortActive="name" matSortDirection="asc" matSortDisableClear>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                {{ 'LORA-GATEWAY-TABLE.NAME' | translate }}
-            </th>
-            <td mat-cell *matCellDef="let element">
-                <a [routerLink]="'/gateways/gateway-detail/' + element.id" routerLinkActive="active" class="application-link">
-                    {{ element.name }}
-                </a>
-            </td>
-        </ng-container>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ 'LORA-GATEWAY-TABLE.NAME' | translate }}
+      </th>
+      <td mat-cell *matCellDef="let gateway">
+        <a [routerLink]="'/gateways/gateway-detail/' + gateway.gatewayId" routerLinkActive="active" class="application-link">
+          {{ gateway.name }}
+        </a>
+      </td>
+    </ng-container>
 
-        <!-- Id Column -->
-        <ng-container matColumnDef="gateway-id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.GATEWAYID' | translate }}</th>
-            <td mat-cell *matCellDef="let element">
-                {{ element.id }}
-            </td>
-        </ng-container>
+    <ng-container matColumnDef="gateway-id">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.GATEWAYID' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.gatewayId }}
+      </td>
+    </ng-container>
 
-        <!-- Organization Column -->
-        <ng-container matColumnDef="internalOrganizationName">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.ORGANIZATION' | translate }}
-            </th>
-            <td mat-cell *matCellDef="let element">
-                {{ element.internalOrganizationName }}
-            </td>
-        </ng-container>
+    <ng-container matColumnDef="internalOrganizationName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.ORGANIZATION' | translate }}
+      </th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.organizationName }}
+      </td>
+    </ng-container>
 
-        <!-- Location Column -->
-        <ng-container matColumnDef="location">
-            <th mat-header-cell *matHeaderCellDef>{{ 'LORA-GATEWAY-TABLE.LOCATION' | translate }}</th>
-            <td mat-cell *matCellDef="let element">
-                {{ element.location.latitude | number:'2.1-6' }},
-                {{ element.location.longitude | number:'2.1-6' }}
-            </td>
-        </ng-container>
+    <ng-container matColumnDef="rxPacketsReceived">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.PACKETS-RECEIVED' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.rxPacketsReceived }}
+      </td>
+    </ng-container>
 
-        <!-- Last seen Column -->
-        <ng-container matColumnDef="last-seen">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                {{ 'LORA-GATEWAY-TABLE.LAST-SEEN-AT' | translate }}
-            </th>
-            <td mat-cell *matCellDef="let element">
-                {{lastActive(element)}}
-            </td>
-        </ng-container>
+    <ng-container matColumnDef="txPacketsEmitted">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.PACKETS-SENT' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.txPacketsEmitted }}
+      </td>
+    </ng-container>
 
-        <!-- Status Column -->
-        <ng-container matColumnDef="status">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                {{ 'LORA-GATEWAY-TABLE.STATUS' | translate }}
-            </th>
-            <td mat-cell *matCellDef="let element">
-                <ng-container *ngIf="gatewayStatus(element); then statusOk else statusError"></ng-container>
-                <ng-template #statusOk>
-                    <fa-icon [icon]="faCheckCircle" class="fa-ok"></fa-icon>
-                </ng-template>
-                <ng-template #statusError>
-                    <fa-icon [icon]="faExclamationTriangle" class="fa-error"></fa-icon>
-                </ng-template>
-            </td>
-        </ng-container>
+    <ng-container matColumnDef="tags">
+      <th mat-header-cell *matHeaderCellDef>{{ 'LORA-GATEWAY-TABLE.TAGS' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{gateway.tagsString}}
+      </td>
+    </ng-container>
 
-        <!-- Menu Column -->
-        <ng-container matColumnDef="menu">
-            <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let element">
-                <div class="dropdown" *ngIf="element.canEdit">
-                    <a href="#" role="button" id="tableRowDropdown-{{ element.id }}"
-                        class="applicationRow__edit dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
-                        [attr.aria-label]="'LORA-GATEWAY-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
-                    <ul class="dropdown-menu dropdown-menu--table"
-                        attr.aria-labelledby="tableRowDropdown-{{ element.id }}">
-                        <li class="dropdown-item">
-                            <a [routerLink]="['../gateway-edit', element.id]" routerLinkActive="active">{{ 'GEN.EDIT' |
-                                translate }}</a>
-                        </li>
-                        <li class="dropdown-item">
-                            <a (click)="clickDelete(element)" [routerLink]="[]">{{ 'GEN.DELETE' | translate }}</a>
-                        </li>
-                    </ul>
-                </div>
-            </td>
-        </ng-container>
+    <ng-container matColumnDef="location">
+      <th mat-header-cell *matHeaderCellDef>{{ 'LORA-GATEWAY-TABLE.LOCATION' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.location.latitude | number:'2.1-6' }},
+        {{ gateway.location.longitude | number:'2.1-6' }}
+      </td>
+    </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-    <mat-paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize" [length]="resultsLength" showFirstLastButtons>
-    </mat-paginator>
+    <ng-container matColumnDef="createdAt">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.CREATED-AT' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.createdAt | dateOnly }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="last-seen">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ 'LORA-GATEWAY-TABLE.LAST-SEEN-AT' | translate }}
+      </th>
+      <td mat-cell *matCellDef="let gateway">
+        {{lastActive(gateway)}}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{ 'LORA-GATEWAY-TABLE.STATUS' | translate }}
+      </th>
+      <td mat-cell *matCellDef="let gateway">
+        <ng-container *ngIf="gatewayStatus(gateway); then statusOk else statusError"></ng-container>
+        <ng-template #statusOk>
+          <fa-icon [icon]="faCheckCircle" class="fa-ok"></fa-icon>
+        </ng-template>
+        <ng-template #statusError>
+          <fa-icon [icon]="faExclamationTriangle" class="fa-error"></fa-icon>
+        </ng-template>
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="menu">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let gateway">
+        <div class="dropdown" *ngIf="gateway.canEdit">
+          <a href="#" role="button" id="tableRowDropdown-{{ gateway.id }}"
+             class="applicationRow__edit dropdown-toggle" data-toggle="dropdown" aria-expanded="false"
+             [attr.aria-label]="'LORA-GATEWAY-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
+          <ul class="dropdown-menu dropdown-menu--table"
+              attr.aria-labelledby="tableRowDropdown-{{ gateway.id }}">
+            <li class="dropdown-item">
+              <a [routerLink]="['../gateway-edit', gateway.id]" routerLinkActive="active">{{ 'GEN.EDIT' |
+                translate }}</a>
+            </li>
+            <li class="dropdown-item">
+              <a (click)="clickDelete(gateway)" [routerLink]="[]">{{ 'GEN.DELETE' | translate }}</a>
+            </li>
+          </ul>
+        </div>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  <mat-paginator [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize" [length]="resultsLength"
+                 showFirstLastButtons>
+  </mat-paginator>
 </div>
