--- a/src/app/applications/applications-list/applications-table/applications-table.component.html
+++ b/src/app/applications/applications-list/applications-table/applications-table.component.html
@@ -75,7 +75,7 @@
           {{'APPLICATION-TABLE.STATUS' | translate}}
         </th>
         <td mat-cell *matCellDef="let application">
-          {{'APPLICATION.STATUS.' + application.status | translate}}
+          {{application.status ? ('APPLICATION.STATUS.' + application.status | translate) : '-'}}
         </td>
       </ng-container>
 
