--- a/src/app/gateway/gateway-table/gateway-table.component.html
+++ b/src/app/gateway/gateway-table/gateway-table.component.html
@@ -106,7 +106,7 @@
           <ul class="dropdown-menu dropdown-menu--table"
               attr.aria-labelledby="tableRowDropdown-{{ gateway.id }}">
             <li class="dropdown-item">
-              <a [routerLink]="['../gateway-edit', gateway.id]" routerLinkActive="active">{{ 'GEN.EDIT' |
+              <a [routerLink]="['../gateway-edit', gateway.gatewayId]" routerLinkActive="active">{{ 'GEN.EDIT' |
                 translate }}</a>
             </li>
             <li class="dropdown-item">
