can now search on maps and dobbeltclick will move marker.

--- a/src/app/shared/components/map/map.component.html
+++ b/src/app/shared/components/map/map.component.html
@@ -1,1 +1,6 @@
+<link
+  rel="stylesheet"
+  href="https://unpkg.com/leaflet-geosearch@3.11.1/dist/geosearch.css"
+/>
+
 <div class="map" id="{{ mapId }}"></div>
