important additions - geosearch should not change version. Added comment in the link to stylesheet.

--- a/src/app/shared/components/map/map.component.html
+++ b/src/app/shared/components/map/map.component.html
@@ -1,3 +1,4 @@
+<!-- IF GEOSEARCH PACKAGE VERSION IS CHANGED, THIS SHOULD BE UPDATED -->
 <link
   rel="stylesheet"
   href="https://unpkg.com/leaflet-geosearch@3.11.1/dist/geosearch.css"
