--- a/src/app/shared/components/map/map.component.html
+++ b/src/app/shared/components/map/map.component.html
@@ -1,7 +1,6 @@
 <!-- IF GEOSEARCH PACKAGE VERSION IS CHANGED, THIS SHOULD BE UPDATED -->
-<link
-  rel="stylesheet"
-  href="https://unpkg.com/leaflet-geosearch@3.6.1/dist/geosearch.css"
-/>
+<!-- CUSTOM STYLING IS MADE UNDER "LEAFLET-STYLES.SCSS" -->
+<link rel="stylesheet" href="https://unpkg.com/leaflet-geosearch@3.6.1/dist/geosearch.css" />
 
 <div class="map" id="{{ mapId }}"></div>
+
