--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,6 +39,8 @@
 
 @import "~leaflet/dist/leaflet.css";
 
+@import "./app/shared/styles/leaflet-styles.scss";
+
 
 @font-face {
   font-family: 'roboto-light';
