--- a/src/app/applications/application-detail/application-detail.component.html
+++ b/src/app/applications/application-detail/application-detail.component.html
@@ -1,47 +1,63 @@
 <div *ngIf="application">
-  <app-top-bar [data]="application" [backButton]="backButton" [subPage]="true"
-               [addDetailDowndown]="true" [dropDownButton]="dropdownButton"
-               (deleteSelectedInDropdown)="onDeleteApplication()"
-               [canEdit]="canEdit">
-  </app-top-bar>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-12">
-        <div class="jumbotron">
-          <div *ngIf="errorMessage" class="error-messages p-3 my-3">
-            {{errorMessage | translate}}
-          </div>
-          <h3>{{ 'APPLICATION.DETAILS' | translate }}</h3>
-          <app-general-details [data]="application"></app-general-details>
-          <p *ngIf="application.description">
-            <strong>{{ 'APPLICATION.DESCRIPTION' | translate }}</strong></p>
-          <pre><p>{{application.description}}</p></pre>
-          <app-metadata-details
-            [permissions]="application.permissions"
-            [status]="application.status"
-            [startDate]="application.startDate"
-            [endDate]="application.endDate"
-            [category]="application.category"
-            [owner]="application.owner"
-            [contactPerson]="application.contactPerson"
-            [contactEmail]="application.contactEmail"
-            [contactPhone]="application.contactPhone"
-            [personalData]="application.personalData"
-            [hardware]="application.hardware"
-            [controlledProperties]="application.controlledProperties"
-            [deviceTypes]="application.deviceTypes"
-          ></app-metadata-details>
+    <app-top-bar
+        [data]="application"
+        [backButton]="backButton"
+        [subPage]="true"
+        [addDetailDowndown]="true"
+        [dropDownButton]="dropdownButton"
+        (deleteSelectedInDropdown)="onDeleteApplication()"
+        [canEdit]="canEdit"
+    >
+    </app-top-bar>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-8 d-flex align-items-stretch">
+                <div class="jumbotron jumbotron--m-left jumbotron--full-width">
+                    <div *ngIf="errorMessage" class="error-messages p-3 my-3">
+                        {{ errorMessage | translate }}
+                    </div>
+                    <h3>{{ "APPLICATION.DETAILS" | translate }}</h3>
+                    <app-general-details [data]="application"></app-general-details>
+                    <p *ngIf="application.description">
+                        <strong>{{ "APPLICATION.DESCRIPTION" | translate }}</strong>
+                    </p>
+                    <pre><p>{{application.description}}</p></pre>
+                    <app-metadata-details
+                        [permissions]="application.permissions"
+                        [status]="application.status"
+                        [startDate]="application.startDate"
+                        [endDate]="application.endDate"
+                        [category]="application.category"
+                        [owner]="application.owner"
+                        [contactPerson]="application.contactPerson"
+                        [contactEmail]="application.contactEmail"
+                        [contactPhone]="application.contactPhone"
+                        [personalData]="application.personalData"
+                        [hardware]="application.hardware"
+                        [controlledProperties]="application.controlledProperties"
+                        [deviceTypes]="application.deviceTypes"
+                    ></app-metadata-details>
+                </div>
+            </div>
+            <div class="col-md-4 d-flex align-items-stretch">
+                <div class="jumbotron jumbotron--m-left jumbotron--full-width">
+                    <div class="thirty-height" *ngIf="devs && gateways">
+                        <app-map [coordinateList]="coordinateList" [isFromApplication]="true"></app-map>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
+        <nav mat-tab-nav-bar>
+            <a
+                mat-tab-link
+                *ngFor="let link of navTabs"
+                [routerLink]="link.link"
+                routerLinkActive
+                #rla="routerLinkActive"
+                [active]="rla.isActive"
+                >{{ link.label | translate }}</a
+            >
+        </nav>
+        <router-outlet></router-outlet>
     </div>
-    <nav mat-tab-nav-bar>
-      <a mat-tab-link
-         *ngFor="let link of navTabs"
-         [routerLink]="link.link"
-         routerLinkActive #rla="routerLinkActive"
-         [active]="rla.isActive"
-      >{{ link.label | translate }}</a>
-    </nav>
-    <router-outlet></router-outlet>
-  </div>
 </div>
