--- a/src/app/applications/iot-devices/iot-device-edit/iot-device-edit.component.html
+++ b/src/app/applications/iot-devices/iot-device-edit/iot-device-edit.component.html
@@ -75,8 +75,9 @@
     </div>
 
     <div class="form-group mt-3 col-12 thirty-height" *ngIf="iotDevice">
-      <app-map [coordinates]="getCoordinates()" (updateCoordinates)="updateCoordinates($event)"></app-map>
+      <app-map [coordinates]="getCoordinates()" (updateCoordinates)="updateCoordinates($event)" [isFromCreation]="true"></app-map>
     </div>
+    <p>{{'DBLCLICKINFO' | translate}}</p>
     <div class="form-group mt-3 col-6">
       <label class="form-label" for="latitude">{{'IOTDEVICE.LATITUDE' | translate}}</label>
       <input type="number" class="form-control" id="latitude" name="latitude" [placeholder]="'00'" required
