--- a/src/app/shared/styles/leaflet-styles.scss
+++ b/src/app/shared/styles/leaflet-styles.scss
@@ -1,3 +1,11 @@
+app-iot-device-edit app-map .leaflet-control-geosearch form input {
+  height: 30px !important
+}
+
+app-gateway-edit app-map .leaflet-control-geosearch form input {
+  height: 30px !important
+}
+
 .leaflet-cluster-anim .leaflet-marker-icon, .leaflet-cluster-anim .leaflet-marker-shadow {
 	-webkit-transition: -webkit-transform 0.3s ease-out, opacity 0.3s ease-in;
 	-moz-transition: -moz-transform 0.3s ease-out, opacity 0.3s ease-in;
