--- a/src/app/gateway/gateway-table/gateway-table.component.html
+++ b/src/app/gateway/gateway-table/gateway-table.component.html
@@ -4,14 +4,14 @@
   [localStorageKey]="gatewayTableSavedColumns"
 ></app-column-selector>
 
-<div class="mat-elevation-z8">
+<div class="mat-elevation-z8 overflow-auto">
   <div class="loading-shade" *ngIf="isLoadingResults">
     <mat-spinner *ngIf="isLoadingResults"></mat-spinner>
   </div>
   <table mat-table [dataSource]="data" matSort matSortActive="name" matSortDirection="asc" matSortDisableClear>
 
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+    <ng-container matColumnDef="name" >
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="min-width-150">
         {{ 'LORA-GATEWAY-TABLE.NAME' | translate }}
       </th>
       <td mat-cell *matCellDef="let gateway">
@@ -22,7 +22,9 @@
     </ng-container>
 
     <ng-container matColumnDef="gatewayId">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.GATEWAYID' | translate }}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="min-width-150">
+        {{ 'LORA-GATEWAY-TABLE.GATEWAYID' | translate }}
+      </th>
       <td mat-cell *matCellDef="let gateway">
         {{ gateway.gatewayId }}
       </td>
@@ -50,15 +52,78 @@
       </td>
     </ng-container>
 
+    <ng-container matColumnDef="placement">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.PLACEMENT' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.placement ? ('GATEWAY.PLACEMENT.' + gateway.placement | translate) : '' }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="modelName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="min-width-150">{{ 'LORA-GATEWAY-TABLE.MODEL-NAME' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.modelName }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="antennaType">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.ANTENNA-TYPE' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.antennaType }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="status">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.STATUS' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.status ? ("GATEWAY.STATUS." + gateway.status | translate) : '' }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="gatewayResponsibleName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="min-width-150">{{ 'LORA-GATEWAY-TABLE.RESPONSIBLE-NAME' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.gatewayResponsibleName }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="gatewayResponsibleEmail">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="min-width-150">{{ 'LORA-GATEWAY-TABLE.RESPONSIBLE-EMAIL' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.gatewayResponsibleEmail }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="gatewayResponsiblePhoneNumber">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.RESPONSIBLE-PHONE-NUMBER' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.gatewayResponsiblePhoneNumber }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="operationalResponsibleName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="min-width-150">{{ 'LORA-GATEWAY-TABLE.OPERATIONAL-NAME' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.operationalResponsibleName }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="operationalResponsibleEmail">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="min-width-150">{{ 'LORA-GATEWAY-TABLE.OPERATIONAL-EMAIL' | translate }}</th>
+      <td mat-cell *matCellDef="let gateway">
+        {{ gateway.operationalResponsibleEmail }}
+      </td>
+    </ng-container>
+
     <ng-container matColumnDef="tags">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'LORA-GATEWAY-TABLE.TAGS' | translate }}</th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="min-width-250">{{ 'LORA-GATEWAY-TABLE.TAGS' | translate }}</th>
       <td mat-cell *matCellDef="let gateway">
         {{gateway.tagsString}}
       </td>
     </ng-container>
 
     <ng-container matColumnDef="location">
-      <th mat-header-cell *matHeaderCellDef>{{ 'LORA-GATEWAY-TABLE.LOCATION' | translate }}</th>
+      <th mat-header-cell *matHeaderCellDef class="min-width-150">{{ 'LORA-GATEWAY-TABLE.LOCATION' | translate }}</th>
       <td mat-cell *matCellDef="let gateway">
         {{ gateway.location.latitude | number:'2.1-6' }},
         {{ gateway.location.longitude | number:'2.1-6' }}
@@ -73,7 +138,7 @@
     </ng-container>
 
     <ng-container matColumnDef="lastSeenAt">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header class="min-width-150">
         {{ 'LORA-GATEWAY-TABLE.LAST-SEEN-AT' | translate }}
       </th>
       <td mat-cell *matCellDef="let gateway">
@@ -81,7 +146,7 @@
       </td>
     </ng-container>
 
-    <ng-container matColumnDef="status">
+    <ng-container matColumnDef="onlineStatus">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>
         {{ 'LORA-GATEWAY-TABLE.STATUS' | translate }}
       </th>
