--- a/src/app/applications/application-detail/application-detail.component.scss
+++ b/src/app/applications/application-detail/application-detail.component.scss
@@ -1,13 +1,22 @@
-@import 'src/assets/scss/setup/breakpoints';
-@import 'src/assets/scss/setup/variables';
+@import "src/assets/scss/setup/breakpoints";
+@import "src/assets/scss/setup/variables";
 
 .application-component {
-  .bottom-separator {
-    min-height: 60px;
-    border-bottom: $grey-separator solid 1px;
+    .bottom-separator {
+        min-height: 60px;
+        border-bottom: $grey-separator solid 1px;
 
-    @include media-breakpoint-up(md) {
-      min-height: 150px;
+        @include media-breakpoint-up(md) {
+            min-height: 150px;
+        }
     }
-  }
+}
+
+.marker {
+    height: 25px;
+    width: 20px;
+}
+
+.markerDescriptionDiv {
+    margin-top: 10px;
 }
