--- a/src/app/applications/datatarget/fiware/fiware-detail/fiware-detail.component.html
+++ b/src/app/applications/datatarget/fiware/fiware-detail/fiware-detail.component.html
@@ -4,7 +4,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-6 d-flex align-items-stretch">
-          <div class="jumbotron jumbotron--m-right jumbotron--full-width">
+          <div class="jumbotron jumbotron--m-right jumbotron--full-width width100percent">
             <h3>{{ 'DATATARGET.DETAILS' | translate }}</h3>
             <app-general-details [data]="datatarget"></app-general-details>
             <mat-divider></mat-divider>
