--- a/src/app/applications/iot-devices/iot-device-detail/iot-device-details-tab/iot-device-details-tab.component.html
+++ b/src/app/applications/iot-devices/iot-device-detail/iot-device-details-tab/iot-device-details-tab.component.html
@@ -3,7 +3,7 @@
   </app-iot-device-detail-generic>
   <!-- Device model -->
   <div class="col-md-6 d-flex align-items-stretch">
-    <div class="jumbotron jumbotron--m-right jumbotron--full-width">
+    <div class="jumbotron jumbotron--m-right jumbotron--full-width width100percent">
       <app-device-model [device]="device"></app-device-model>
     </div>
   </div>
