--- a/src/app/applications/multicast/multicast-detail/multicast-detail.component.html
+++ b/src/app/applications/multicast/multicast-detail/multicast-detail.component.html
@@ -9,7 +9,7 @@
   ></app-top-bar>
   <div class="row">
     <div class="col-md-6 d-flex align-items-stretch">
-      <div class="jumbotron jumbotron--m-right jumbotron--full-width">
+      <div class="jumbotron jumbotron--m-right jumbotron--full-width width100percent">
         <h3>{{ 'MULTICAST.BASIC-DETAILS' | translate }}</h3>
         <app-general-details [data]="multicast"></app-general-details>
         <p>
@@ -52,7 +52,7 @@
     </div>
 
     <div class="col-md-6 d-flex align-items-stretch">
-      <div class="jumbotron jumbotron--m-left jumbotron--full-width">
+      <div class="jumbotron jumbotron--m-left jumbotron--full-width width100percent">
         <h3>{{ 'APPLICATION.ATTACHED-IOT' | translate }}</h3>
         <div class="col-md-7 d-flex align-items-center">
           <p>
