--- a/src/app/gateway/gateway-detail/gateway-detail.component.html
+++ b/src/app/gateway/gateway-detail/gateway-detail.component.html
@@ -4,7 +4,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-6 d-flex align-items-stretch">
-        <div class="jumbotron jumbotron--m-right jumbotron--full-width">
+        <div class="jumbotron jumbotron--m-right jumbotron--full-width width100percent">
           <h3>{{ 'GATEWAY.DETAILS' | translate }}</h3>
           <p><strong>{{ 'GATEWAY.ID' | translate }}</strong>{{gateway.gatewayId}}</p>
           <p><strong>{{ 'GATEWAY.ORGANIZATION' | translate }}</strong>{{gateway.organizationName}}</p>
@@ -26,7 +26,7 @@
         </div>
       </div>
       <div class="col-md-6 d-flex align-items-stretch">
-        <div class="jumbotron jumbotron--m-left jumbotron--full-width">
+        <div class="jumbotron jumbotron--m-left jumbotron--full-width width100percent">
           <div *ngIf="gateway.location; else locationElseBlock">
             <h3>{{ 'GATEWAY.LOCATION' | translate }}</h3>
             <div class="thirty-height">
