filtered out gateways from clustering

--- a/src/app/applications/application-detail/application-detail.component.html
+++ b/src/app/applications/application-detail/application-detail.component.html
@@ -47,7 +47,7 @@
                     <div class="col d-flex markerDescriptionDiv">
                         <div class="col d-flex">
                             <img class="marker" src="{{ greyMarker }}" />
-                            <p>: IoT-Device</p>
+                            <p>: IoT-Enhed</p>
                         </div>
                         <div class="col d-flex">
                             <img class="marker" src="{{ redMarker }}" />
