added alt to img

--- a/src/app/applications/application-detail/application-detail.component.html
+++ b/src/app/applications/application-detail/application-detail.component.html
@@ -46,15 +46,15 @@
                     </div>
                     <div class="col d-flex markerDescriptionDiv">
                         <div class="col d-flex">
-                            <img class="marker" src="{{ greyMarker }}" />
+                            <img alt="IoTDeviceMarker" class="marker" src="{{ greyMarker }}" />
                             <p>: IoT-Enhed</p>
                         </div>
                         <div class="col d-flex">
-                            <img class="marker" src="{{ redMarker }}" />
+                            <img alt="InactiveGatewayMarker" class="marker" src="{{ redMarker }}" />
                             <p>: Inaktiv gateway</p>
                         </div>
                         <div class="col d-flex">
-                            <img class="marker" src="{{ greenMarker }}" />
+                            <img alt="ActiveGatewayMarker" class="marker" src="{{ greenMarker }}" />
                             <p>: Aktiv gateway</p>
                         </div>
                     </div>
