--- a/src/app/shared/components/column-selector/column-selector.component.html
+++ b/src/app/shared/components/column-selector/column-selector.component.html
@@ -23,6 +23,6 @@
     </mat-option>
   </mat-select>
   <button mat-icon-button type="button" class="button-margin" (click)="Selector.open()">
-    <fa-icon [icon]="cogIcon" class="icon--medium cog-icon"></fa-icon>
+    <fa-icon [icon]="cogIcon" class="cog-icon"></fa-icon>
   </button>
 </div>
