--- a/src/assets/scss/components/_tables.scss
+++ b/src/assets/scss/components/_tables.scss
@@ -19,14 +19,13 @@ table {
     }
   }
 
-  th,
-  td {
-    padding: 0.5rem 1rem;
+  th {
+    color: $grey-tablehead !important;
+    font-weight: normal !important;
   }
 
   thead {
-    color: $grey-tablehead;
-    background-color: $grey-dark;
+    background-color: $grey-dark !important;
   }
 
   tbody {
@@ -36,10 +35,14 @@ table {
       color: $black;
 
       &:hover {
-        background-color: $grey-highlight;
+        background-color: $grey-highlight !important;
       }
     }
   }
+}
+
+.mdc-data-table__cell {
+  overflow: visible !important;
 }
 
 .dropdown {
@@ -116,7 +119,7 @@ table {
 }
 
 .table-select {
-  width: 180px !important;
+  width: 500px !important;
   visibility: hidden;
   height: 10px;
 }
