--- a/src/assets/scss/components/_topbar.scss
+++ b/src/assets/scss/components/_topbar.scss
@@ -77,3 +77,7 @@
 .no-margin {
   margin-bottom: 0 !important;
 }
+
+.mat-mdc-form-field-has-icon-suffix .mat-mdc-text-field-wrapper {
+  background-color: transparent !important;
+}
