--- a/src/app/shared/components/forms/form-body-application/form-body-application.component.html
+++ b/src/app/shared/components/forms/form-body-application/form-body-application.component.html
@@ -82,11 +82,11 @@
       </mat-select>
     </div>
 
-    <div class="form-group mt-3">
+    <div class="form-group mt-3 flexDirectionColumn">
       <label class="form-label" for="application.startDate">{{
         "APPLICATION.METADATA-FIELD.START-DATE" | translate
       }}</label>
-      <mat-form-field appearance="fill" id="application.startDate">
+      <mat-form-field appearance="outline" id="application.startDate">
         <mat-label>{{ "QUESTION.APPLICATION.START-DATE-PLACEHOLDER" | translate }}</mat-label>
         <input
           matInput
@@ -104,11 +104,11 @@
       </mat-form-field>
     </div>
 
-    <div class="form-group mt-3">
+    <div class="form-group mt-3 flexDirectionColumn">
       <label class="form-label" for="application.endDate">{{
         "APPLICATION.METADATA-FIELD.END-DATE" | translate
       }}</label>
-      <mat-form-field appearance="fill" id="application.endDate">
+      <mat-form-field appearance="outline" id="application.endDate">
         <mat-label>{{ "QUESTION.APPLICATION.END-DATE-PLACEHOLDER" | translate }}</mat-label>
         <input
           matInput
