--- a/src/app/shared/components/top-bar/top-bar.component.scss
+++ b/src/app/shared/components/top-bar/top-bar.component.scss
@@ -14,7 +14,7 @@ button:focus {
   pointer-events: none;
 }
 .userNameFont {
-  font-weight: bold;
+  font-weight: bold !important;
 }
 
 .mobileMedia {
