--- a/src/app/shared/components/column-selector/column-selector.component.html
+++ b/src/app/shared/components/column-selector/column-selector.component.html
@@ -10,14 +10,13 @@
     #Selector
     [placeholder]="'TABLE.COLUMNS' | translate"
   >
-    <mat-option disabled>
-      <button mat-raised-button class="mat-primary fill text-sm" (click)="selectAll()">
-        {{ "QUESTION.DATATARGET.SELECTALLDEVICES" | translate }}
-      </button>
-      <button mat-raised-button class="mat-primary fill text-sm" (click)="deSelectAll()">
-        {{ "QUESTION.DATATARGET.DESELECTALLDEVICES" | translate }}
-      </button>
-    </mat-option>
+    <button mat-raised-button class="mat-primary fill text-sm choose-all" (click)="selectAll()">
+      {{ "QUESTION.DATATARGET.SELECTALLDEVICES" | translate }}
+    </button>
+    <button mat-raised-button class="mat-primary fill text-sm deselect-all" (click)="deSelectAll()">
+      {{ "QUESTION.DATATARGET.DESELECTALLDEVICES" | translate }}
+    </button>
+
     <mat-option *ngFor="let option of optionalColumnOptions" [value]="option.id">
       {{ option.display | translate }}
     </mat-option>
