--- a/src/assets/scss/components/_date-picker.scss
+++ b/src/assets/scss/components/_date-picker.scss
@@ -7,7 +7,10 @@ mat-calendar.datepicker-table-fix {
     -moz-box-shadow: unset;
 
     thead {
-      background-color: unset;
+      background-color: transparent !important;
+    }
+    th {
+      color: black !important;
     }
 
     tbody {
